test/spec_vectors/simd_align/ok/module_41.wat
(module (memory 1) (func (drop (v128.load64_splat align=2 (i32.const 0)))))