test/spec_vectors/simd_align/fail/module_55.wat
(module (memory 1) (func (result v128) (v128.load64_splat align=16 (i32.const 0))))